Fix alignment

--- a/css/main.scss
+++ b/css/main.scss
@@ -116,7 +116,7 @@ body {
         background-size: cover;
         font-weight: 800;
         background-position-y: center;
-        font-size: 4rem;
+        font-size: 50px;
       }
     }
 
@@ -303,7 +303,7 @@ body {
         background-size: cover;
         font-weight: 800;
         background-position-y: center;
-        font-size: 4rem;
+        font-size: 50px;
       }
     }
 
@@ -716,6 +716,26 @@ body {
       flex-direction: row;
       align-items: center;
       justify-content: center;
+    }
+  }
+
+  .aboutPage {
+    .mainContent {
+      .headingContainer {
+        .titleHeading {
+          font-size: 70px;
+        }
+      }
+    }
+  }
+
+  .homePage {
+    .mainContent {
+      .headingContainer {
+        .titleHeading {
+          font-size: 70px;
+        }
+      }
     }
   }
 }
